@@ -858,32 +858,12 @@ block|{
 name|DefaultModuleDescriptor
 name|md
 decl_stmt|;
-name|String
-index|[]
-name|confs
-init|=
-name|options
-operator|.
-name|getConfs
-argument_list|()
-decl_stmt|;
 if|if
 condition|(
-name|confs
+name|options
 operator|.
-name|length
-operator|==
-literal|1
-operator|&&
-name|confs
-index|[
-literal|0
-index|]
-operator|.
-name|equals
-argument_list|(
-literal|"*"
-argument_list|)
+name|useSpecialConfs
+argument_list|()
 condition|)
 block|{
 comment|// create new resolve options because this is a different resolve than the real resolve
@@ -917,7 +897,15 @@ name|newCallerInstance
 argument_list|(
 name|mrid
 argument_list|,
-name|confs
+name|options
+operator|.
+name|getConfs
+argument_list|(
+name|rmr
+operator|.
+name|getDescriptor
+argument_list|()
+argument_list|)
 argument_list|,
 name|options
 operator|.
@@ -974,16 +962,20 @@ return|;
 block|}
 else|else
 block|{
+name|String
+index|[]
 name|confs
-operator|=
+init|=
+name|options
+operator|.
+name|getConfs
+argument_list|(
 name|rmr
 operator|.
 name|getDescriptor
 argument_list|()
-operator|.
-name|getConfigurationsNames
-argument_list|()
-expr_stmt|;
+argument_list|)
+decl_stmt|;
 name|md
 operator|=
 name|DefaultModuleDescriptor
@@ -1027,7 +1019,10 @@ name|newCallerInstance
 argument_list|(
 name|mrid
 argument_list|,
-name|confs
+name|options
+operator|.
+name|getConfs
+argument_list|()
 argument_list|,
 name|options
 operator|.
@@ -1281,35 +1276,10 @@ init|=
 name|options
 operator|.
 name|getConfs
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|confs
-operator|.
-name|length
-operator|==
-literal|1
-operator|&&
-name|confs
-index|[
-literal|0
-index|]
-operator|.
-name|equals
 argument_list|(
-literal|"*"
-argument_list|)
-condition|)
-block|{
-name|confs
-operator|=
 name|md
-operator|.
-name|getConfigurationsNames
-argument_list|()
-expr_stmt|;
-block|}
+argument_list|)
+decl_stmt|;
 name|options
 operator|.
 name|setConfs
@@ -2380,35 +2350,10 @@ init|=
 name|options
 operator|.
 name|getConfs
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|confs
-operator|.
-name|length
-operator|==
-literal|1
-operator|&&
-name|confs
-index|[
-literal|0
-index|]
-operator|.
-name|equals
 argument_list|(
-literal|"*"
-argument_list|)
-condition|)
-block|{
-name|confs
-operator|=
 name|md
-operator|.
-name|getConfigurationsNames
-argument_list|()
-expr_stmt|;
-block|}
+argument_list|)
+decl_stmt|;
 name|options
 operator|.
 name|setConfs
