@@ -89,6 +89,20 @@ name|ivy
 operator|.
 name|util
 operator|.
+name|ConfigurationUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|util
+operator|.
 name|filter
 operator|.
 name|Filter
@@ -349,14 +363,102 @@ return|return
 name|this
 return|;
 block|}
+comment|/**      * Indicates if the configurations use a special configuration       * * , *(private) or *(public).      * When special configurations are used, to must have the module      * descriptor in order to get the list of configurations.      * @see #getConfs()      * @see #getConfs(ModuleDescriptor)      */
+specifier|public
+name|boolean
+name|useSpecialConfs
+parameter_list|()
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|confs
+operator|!=
+literal|null
+operator|&&
+name|i
+operator|<
+name|confs
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+name|confs
+index|[
+literal|0
+index|]
+operator|.
+name|startsWith
+argument_list|(
+literal|"*"
+argument_list|)
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+block|}
+return|return
+literal|false
+return|;
+block|}
+comment|/**      * @pre can only be called if useSpecialConfs()==false.  When it is true,       * you have to provide a module desciptor so that configurations can be resolved.      * @see #getConfs(ModuleDescriptor)      */
 specifier|public
 name|String
 index|[]
 name|getConfs
 parameter_list|()
 block|{
+if|if
+condition|(
+name|useSpecialConfs
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|AssertionError
+argument_list|(
+literal|"ResolveOptions.getConfs() "
+operator|+
+literal|"can not be used for options used special confs."
+argument_list|)
+throw|;
+block|}
 return|return
 name|confs
+return|;
+block|}
+comment|/**       * Get the aksed confs.  Special confs (like *) use the moduleDescriptor to find the values *       * @param md Used to get the exact values for special confs.       * */
+specifier|public
+name|String
+index|[]
+name|getConfs
+parameter_list|(
+name|ModuleDescriptor
+name|md
+parameter_list|)
+block|{
+comment|//TODO add isInline, in that case, replace * by *(public).
+return|return
+name|ConfigurationUtils
+operator|.
+name|replaceWildcards
+argument_list|(
+name|confs
+argument_list|,
+name|md
+argument_list|)
 return|;
 block|}
 specifier|public
