@@ -1,0 +1,36 @@
+<!--
+   Licensed to the Apache Software Foundation (ASF) under one
+   or more contributor license agreements.  See the NOTICE file
+   distributed with this work for additional information
+   regarding copyright ownership.  The ASF licenses this file
+   to you under the Apache License, Version 2.0 (the
+   "License"); you may not use this file except in compliance
+   with the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing,
+   software distributed under the License is distributed on an
+   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+   KIND, either express or implied.  See the License for the
+   specific language governing permissions and limitations
+   under the License.    
+-->
+<ivy-module version="1.0">
+	<info organisation="org2"
+	       module="mod2.2"
+	       revision="0.8"
+	       status="integration"
+	       publication="20041101110000"
+	/>
+	<configurations>
+		<conf name="myconf1" description="desc 1" visibility="public"/>
+		<conf name="myconf2" description="desc 2" visibility="private"/>
+	</configurations>
+	<dependencies>
+		<dependency org="org1" name="mod1.3" rev="3.0">
+			<artifact name="mod1.3-A" type="jar"/>
+			<artifact name="mod1.3-B" type="jar" conf="myconf1"/>
+		</dependency>
+	</dependencies>
+</ivy-module>
